After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 789388 - Minor fixes to gegl:shadows-highlights
Minor fixes to gegl:shadows-highlights
Status: RESOLVED FIXED
Product: GEGL
Classification: Other
Component: operations
git master
Other All
: Normal normal
: ---
Assigned To: Default Gegl Component Owner
Default Gegl Component Owner
Depends on:
Blocks:
 
 
Reported: 2017-10-24 08:38 UTC by Debarshi Ray
Modified: 2017-10-24 15:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
operations/workshop/shadows-highlights: Fix the upper limit of "radius" (1.11 KB, patch)
2017-10-24 08:39 UTC, Debarshi Ray
committed Details | Review
operations/workshop/shadows-highlights-correction: Use unbounded values (1.40 KB, patch)
2017-10-24 08:39 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2017-10-24 08:38:23 UTC
I noticed a few minor details in gegl:shadows-highlights which might be actual buglets. See the patches.
Comment 1 Debarshi Ray 2017-10-24 08:39:15 UTC
Created attachment 362155 [details] [review]
operations/workshop/shadows-highlights: Fix the upper limit of "radius"
Comment 2 Debarshi Ray 2017-10-24 08:39:42 UTC
Created attachment 362156 [details] [review]
operations/workshop/shadows-highlights-correction: Use unbounded values
Comment 3 Debarshi Ray 2017-10-24 15:22:59 UTC
From #gegl on GIMPNet:

14:29 <tmanni> rishi: feel free to push any changes related to gegl ops         
      improvement (particularly for simple fixes like                           
      https://bugzilla.gnome.org/show_bug.cgi?id=789388)