operations/workshop/shadows-highlights: Fix the upper limit of "radius"

The "radius" property is bound to the standard deviation properties of
gegl:gaussian-blur, whose upper limits are 1500.0. Therefore, the same
restriction should be imposed on "radius" too.

https://bugzilla.gnome.org/show_bug.cgi?id=789388